2004-07-06 Alain Magloire

	Fix PR 69199
	* browser/org/eclipse/cdt/core/browser/TypeInfo.java

2004-07-06 Hoda Amer
	Fix for PR 68933 : [Content Assist] removes asterisks from parameter prompt
	
2004-07-05 Hoda Amer
	Patch for Keith Campbell, a small fix in CConventions.
	
2004-06-29 Alain Magloire

	Possible fix for 68665
	* model/org/eclipse/cdt/internal/core/model/CElementInfo.java

2004-06-29 Alain Magloire

	Fix for PR 68820.
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	
2004-06-28 Bogdan Gheorghe
	Fix for 67656: [Indexer] getting called twice after creating a project with a file system
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2004-06-24 Alain Magloire

	Fix for 68226
	* model/org/eclipse/cdt/internal/core/model/CElementInfo.java

2004-06-22 Alain Magloire
	Part of PR 68246.
	Close the inputstream to release resource handle
	when we done with it, we can not rely on the GC to do it for us.

	* src/org/eclipse/cdt/core/parsre/ParserUtil.java

2004-06-22 Alain Magloire

	Fix the exclusion scheme in IPathEntry.

	* model/org/eclipse/cdt/core/mode/CoreModelUtil.java
	* model/org/eclipse/cdt/internal/core/model/CContainer.java
	* model/org/eclipse/cdt/internal/core/model/Openable.java
	* model/org/eclipse/cdt/internal/core/model/SourceRoot.java

2004-06-21 Alain Magloire

	Big Patch from Vladimir Hirsl
	Implementation of AIX XCOFF32 binary parser.

	* utils/org/eclipse/cdt/utils/xcoff/AR.java
	* utils/org/eclipse/cdt/utils/xcoff/XCoff32.java

	* utils/org/eclipse/cdt/utils/xcoff/parser/ARMember.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/BinaryArchive.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFF32Parser.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryObject.java
	
2004-06-21 Alain Magloire

	The PathEntryManager was returning the array instead
	of making a copy.  Potentially clients could have
	modified the contents.

	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java